Make PDF printing transformations consistent between 1-up and N-up.

Currently, 1-up printing and N-up printing have separate paths that do
transformations on PDFs to fit them to the printable area for printing.
The 1-up path has been in use for years. The N-up path is in development
but has some trouble with certain PDFs.

To fix the N-up path, make it go through the 1-up path first. Now with a
properly transformed 1-up PDF, the N-up path can just do N-up layout in
addition. This also makes N-up PDF printing work correctly with the
scaling setting.

BUG=844211

Change-Id: I911187e585214ff40327752801c38bda8cf129b7
Reviewed-on: https://chromium-review.googlesource.com/1238078
Reviewed-by: Rebekah Potter <rbpotter@chromium.org>
Commit-Queue: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595118}
Former-commit-id: 82637b85857d4040c38004a4db95d7a09385217d